Added bStats to log anonymous data about plugin usage
Added an option for teams to have money associated with them (using vault) 

Improvements:
Added a permission node for displaying team name: 'betterteams.teamName'
It is now configurable if the team name is displayed as a prefix or a suffix.
Added placeholders for score and balance

Bug Fixes: 
Fixed the commands /team promote and /team demote: (https://github.com/booksaw/BetterTeams/issues/3)
Fixed problem with all scoreboards being overtaken by the plugin scoreboard: (https://github.com/booksaw/BetterTeams/issues/2)


3.0.8
Improvements:
/teama reload works under more circumstances
Team prefix can is editable in messages.yml (https://github.com/booksaw/BetterTeams/issues/6)
/team chat messages can now be logged to the console

Bug Fixes: 
Fixed team chat priority issue (https://github.com/booksaw/BetterTeams/issues/5)

3.0.9
Features: 
Added /teama chatspy to spy on messages sent to team chats
Added /team title <player/me> <title> to set the title of that team 
Added /teama title <player> <title> to force a player to have a set title
Added /teama version to view the plugin version

Improvements:
Added a placeholder for team rank (%betterteams_rank%)
Players rank in team is now displayed in team chat (via '*' for admins and '**' for owners). This can be changed or disabled in messages.yml

Bug Fixes: 
Fixed a bug where if HolographicDisplays is present but not enabled on the server, errors appear in the console. 


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
add new commands help messages to messages.yml
add /teama chatspy to spigot plugin page
add /team title to wiki and spigot plugin page (betterteams.title.others) 
add betterteams.title.self, betterteams.title.color.color, betterteams.title.color.format
add /teama vresion admin.version
Updates config and messages.yml version



Headings: 
Features: 


Improvements:


Bug Fixes: 
