@@ -31,6 +31,7 @@ Fixed team chat priority issue (https://github.com/booksaw/BetterTeams/issues/5)
 Features: 
 Added /teama chatspy to spy on messages sent to team chats
 Added /team title <player/me> <title> to set the title of that team 
+Added /team top to view the leaderboard of teams based on their score
 Added /teama title <player> <title> to force a player to have a set title
 Added /teama version to view the plugin version
 
@@ -47,7 +48,8 @@ add new commands help messages to messages.yml
 add /teama chatspy to spigot plugin page
 add /team title to wiki and spigot plugin page (betterteams.title.others) 
 add betterteams.title.self, betterteams.title.color.color, betterteams.title.color.format
-add /teama vresion admin.version
+add /team top betterteams.top 
+add /teama version betterteams.admin.version
 Updates config and messages.yml version
 
 
